Added doxument service. Added benchmark info

--- a/config.example.yml
+++ b/config.example.yml
@@ -5,3 +5,7 @@ googledocs:
 saaspose:
     appSID: theappSID
     appKey: theappKey
+    
+doxument:
+    apiKey: theappKey
+    apiToken: theappToken
